--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,16 @@
     tools:context=".MainActivity"
 >
 
-    <ImageView
-        android:id="@+id/launchImage"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <View
+        android:id="@+id/mainView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="0dp"
         android:layout_marginBottom="0dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        app:layout_constrainedHeight="true"
-        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/launchscreen" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
